Wed Sep 27 11:30:27 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/Makefile.am:
	* tests/testresampler.cc: Moved testresampler.cc from bse/tests to
	slowtests, to prepare it for automatic accuracy testing. Excessive
	automatic testing will be quite slow, thus it needs to be in this
	directory.

Wed Sep 27 11:27:35 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/testresampler.cc: Allow using --fpu instead of
	--bse-force-fpu, because that means less typing.
	In the accuracy test, print out the threshold given by the user, if
	any (that way, it becomes easier to validate the "safety margin"
	between the specified and the actual threshold)

Tue Sep 26 10:34:03 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bseblockutils.cc bseblockutils.hh: Provide hook for testing the
	resampler2 implementation.

	* tests/testresampler.cc bseresamplerimpl.hh: Moved SSE filter
	implementation test to the new function fir_test_filter_sse, which
	can then be properly compiled using -msse within the bseblockutils
	plugin for the SSE case.

Fri Sep 22 15:25:19 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/testresampler.cc: Make resampler more user friendly, by using
	more long options, explicit command names and improving the usage. For
	instance testresampler ad becomes testresampler accuracy --down.
	We also leave it up to bse to determine whether to use the SSE or FPU
	variant; bse's decision can be influenced by --bse-force-fpu.
	Print usage() to stdout, to make it less'able.

Sun Sep 17 16:42:36 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/testresampler.cc: Minor fix in usage() function.

Sun Sep 17 16:27:59 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/testresampler.cc: Added option parsing, to be able to specify
	a lot more details on what test should be performed and how.
	Use bse to instantiate the upsampler and downsampler; this allows us
	to use bse's automatic SSE detection features, and bse's coefficient